tests/NormalTests/paczka2/big_fuzzy/18681803.err
Error in line 1: S311 S707 32,5
Error in line 9: S311 A876 64,34
Error in line 12: 4siBFm A876 116,3
Error in line 23: S311S31194,2
Error in line 17: BjfkrleRKz S311 27,2
Error in line 15: atUA S707 6,1
Error in line 29: BjfkrleRKz A876 25,2
Error in line 33: BjfkrleRKz S418 38,8
Error in line 48: lvb1 S418 96,2
Error in line 55: nA6NFX A876 63,X
Error in line 68: BjfkrleRKz S311 42,2
Error in line 69: S311 S418 85,6
Error in line 91: nA6NFX S418 57,6
Error in line 98: 4siBFm S707 40,79
Error in line 104: BjfkrleRKz A876 49,1
Error in line 123: lvb1 S707 39,46
Error in line 118: lvb1 S418 69,5
Error in line 127: atUA S311 14,8
Error in line 128: BjfkrleRKz S418 77,4
Error in line 124: lvb1 S707 154,8
Error in line 140: 4siBFm S418 68,6
Error in line 157: S311 S707 33,8
Error in line 177: tBxTtW9 A876 -2,2
Error in line 171: lvb1 S311 61,4
Error in line 183: nA6NFX S4"8 22,6
Error in line 173: tBxTtW9 A876 91,9
Error in line 176: S311 A876 168,4
Error in line 198: tBxTtW9 S4R8 RR4,2
Error in line 193: S311 S707 8,5
Error in line 199: S311 A876 80,1
Error in line 182: nA6NFX S418 14,6
Error in line 192: BjfkrleRKz S311 1,2
Error in line 189: tBxTtW9 S418 25,0
Error in line 203: BjfkrleRKz S707 44,7
Error in line 209: BjfkrleRKz S311 12,4
Error in line 211: BjfkrleRKz S418 25,2
Error in line 212: BjfkrleRKz S311 55,8
Error in line 216: nA6NFX S707 21,0
Error in line 219: nA6NFX S418 1,3
Error in line 228: lvb1 S418 29,0
Error in line 240: lvb1 A876 57,3
